more validation and deletion
